# duplo

./: .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  CURRENT_PLAN.md  DRAFTER-design.md  INIT-design.md  MIGRATION-design.md  NOTES.md  PARSER-design.md  PIPELINE-design.md  PLAN.md  README.md  REDESIGN-overview.md  SPEC-guide.md  SPEC-template.md  mcloop.json  pyproject.toml
.duplo/: errors.jsonl
.mcloop/: interrupted.json
duplo/: __init__.py  appshot.py  build_prefs.py  claude_cli.py  collector.py  comparator.py  design_extractor.py  diagnostics.py  doc_examples.py  doc_tables.py  docs_extractor.py  extractor.py  fetcher.py  frame_describer.py  frame_filter.py  gap_detector.py  hasher.py  init.py  initializer.py  investigator.py  issuer.py  main.py  migration.py  notifier.py  orchestrator.py  parsing.py  pdf_extractor.py  pipeline.py  planner.py  questioner.py  roadmap.py  runner.py  saver.py  scanner.py  screenshotter.py  selector.py  spec_reader.py  spec_writer.py  status.py  task_matcher.py  (+5 more)
pytest-of-mhcoen/: pytest-current
tests/: conftest.py  test_appshot.py  test_build_prefs.py  test_claude_cli.py  test_collector.py  test_comparator.py  test_design_extractor.py  test_diagnostics.py  test_doc_examples.py  test_doc_tables.py  test_docs_extractor.py  test_extractor.py  test_fetcher.py  test_frame_describer.py  test_frame_filter.py  test_gap_detector.py  test_hasher.py  test_init.py  test_initializer.py  test_investigator.py  test_issuer.py  test_main.py  test_migration.py  test_mypy.py  test_notifier.py  test_orchestrator.py  test_parsing.py  test_pdf_extractor.py  (+25 more)
(+380 files in other folders)
