[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duplo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcloop"]

[tool.setuptools]
packages = ["duplo"]

[project.scripts]
duplo = "duplo.main:main"

[tool.ruff]
target-version = "py311"
line-length = 99
