[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duplo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcloop", "httpx>=0.27", "beautifulsoup4>=4.12", "lxml>=5.0", "playwright>=1.40", "anthropic>=0.40"]

[tool.setuptools]
packages = ["duplo"]

[project.scripts]
duplo = "duplo.main:main"

[tool.ruff]
target-version = "py311"
line-length = 99
