[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duplo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcloop",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "anthropic>=0.40",
    "pypdf>=4.0",
    "Pillow>=10.0",
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pytest-randomly>=3.15",
]

[tool.setuptools]
packages = ["duplo"]

[project.scripts]
duplo = "duplo.main:main"

[tool.pytest.ini_options]
addopts = "-n auto"
timeout = 60

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint.per-file-ignores]
"duplo/main.py" = ["E402"]
